--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
     <p align="center">用薪创造快乐</p > 
     <p align="center">
     	<a href=" " target="_blank">
-    		< img src="1/1.jpg"></a >
+    		< img src="https:Add-a-bio.github.io/1.jpeg
+"></a >
 </html>
