--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   <body> 
     <p align="center">用薪创造快乐</p > 
     <p align="center">
-    	<a href=" " target="_blank">
+    	<a href="https:2448639601.github.io/2.gif
+" target="_blank">
     		< img src="https:Add-a-bio.github.io/1.jpeg
 "></a >
 </html>
