--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <p align="center">
     	<a href="https:2448639601.github.io/2.gif
 " target="_blank">
-    		< img src="https:Add-a-bio.github.io/1.jpeg
+    		< img src="https: 2448639601.github.io/1.jpeg
+
 "></a >
 </html>
