--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <p align="center">
     	<a href="https:2448639601.github.io/2.gif
 " target="_blank">
-    		< img src="https:2448639601.github.io/1.jpeg
+    		<img src="https:2448639601.github.io/1.jpeg
 
 "></a >
+ </p > 
+    </body> 
 </html>
