--- a/index.html
+++ b/index.html
@@ -6,10 +6,9 @@
   <body> 
     <p align="center">用薪创造快乐</p > 
     <p align="center">
-    	<a href="https:2448639601.github.io/2.gif
+    	<a href="https:2448639601.github.io/mht.jpg
 " target="_blank">
-    		<img src="https:2448639601.github.io/1.jpeg
-
+    		<img src="https:2448639601.github.io/xiazi.jpg
 "></a >
  </p > 
     </body> 
