--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <title>小学生作文</title> 
   </head> 
-  <body> 
+  <link rel="apple-touch-icon" href="https: 2448639601.github.io/favicon.ico
+">
+  <meta name="apple-mobile-web-app-title" content="不要瞎子">
+<body> 
   <body bgcolor="#000000">
     <p align="center"><font color="#FFFFFF" size="5000">打团不要瞎子</p >
     <p align="left"><font color="#7CFC00" size="30">
