--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
         <img src="https:2448639601.github.io/xiazi.jpg"></a>
       </p >
    <p align="center">
-     <a href="https://j.map.baidu.com/jVneO" target="_blank"> 2448639601.github.io/BaiDuDiTu.bmp
-</a></p >
+     <a href="https://j.map.baidu.com/jVneO" target="_blank">
+       <img src=" 2448639601.github.io/BaiDuDiTu.bmp">
+     </a></p >
     <p align="center"><img src=" 2448639601.github.io/erweima.png">
     </p >
   </body> 
