--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="apple-mobile-web-app-title" content="不要瞎子">
 <body> 
   <body bgcolor="#000000">
-    <p align="center"><font color="#FFFFFF" size="50px">打团不要瞎子</p >
+    <p align="center"><font color="#FFFFFF" size="50"px>打团不要瞎子</p >
     <p align="left"><font color="#7CFC00" size="30px">
       从前有个女孩，是个盲人，天生的。她讨厌自己，讨厌世界上所有人，除了那个爱她的男孩。无论伤心快乐，男孩都陪着她。如果我有一天能看见这个世界，我一定嫁给你！女孩对男孩这样说。
     </p >
