--- a/index.html
+++ b/index.html
@@ -6,14 +6,12 @@
 <body> 
   <body bgcolor="#000000">
     <p style="font-size:50px;color:#FFFFFF;text-align:center;">打团不要瞎子</p> 
-    <span style="font-size:30px;color:#FF0000;">从前有个女孩，是个盲人，天生的。她讨厌自己，讨厌世界上所有人，除了那个爱她的男孩。无论伤心快乐，男孩都陪着她。如果我有一天能看见这个世界，我一定嫁给你！女孩对男孩这样说。
+    <span style="font-size:30px;color:#7CFC00;">从前有个女孩，是个盲人，天生的。她讨厌自己，讨厌世界上所有人，除了那个爱她的男孩。无论伤心快乐，男孩都陪着她。如果我有一天能看见这个世界，我一定嫁给你！女孩对男孩这样说。
     </span>  
-    </p >
-    <p align="left"><font color="#7CFC00" size="30px">
-      女孩对男孩这样说。不知过了多久，有人愿意捐献眼角膜治女孩的眼睛。手术后，女孩看见了这个多姿多彩的世界，却悲哀地发现男孩竟是个瞎子。。。你会嫁给我吗？男孩在那个晴朗的午后，攥住女孩的手问。女孩犹豫了一下，终究是抽出了自己的手。对不起，我讨厌瞎子……女孩走时低声说。男孩低下了头，泪无声地从无焦距的眼中滑落。。。女孩走后有一个多月，男孩执笔给女孩写了一封信。寥寥数字：亲爱的xxx，请珍惜我的眼睛，我会永远爱你。。。随后男孩带上了眼罩穿上披风，来到了阿拉德大陆，用耳去听，用心去砍！刀斩肉身，心斩灵魂，剑是不会迟疑的！
-    </p >
-    <p align="left"><font color="#7CFC00" size="30px">奶妈：不好意思虽然团长你那么煽情，但是我还是不奶瞎子  已退出攻坚队
-    </p >
+   <span style="font-size:30px;color:#7CFC00;">女孩对男孩这样说。不知过了多久，有人愿意捐献眼角膜治女孩的眼睛。手术后，女孩看见了这个多姿多彩的世界，却悲哀地发现男孩竟是个瞎子。。。你会嫁给我吗？男孩在那个晴朗的午后，攥住女孩的手问。女孩犹豫了一下，终究是抽出了自己的手。对不起，我讨厌瞎子……女孩走时低声说。男孩低下了头，泪无声地从无焦距的眼中滑落。。。女孩走后有一个多月，男孩执笔给女孩写了一封信。寥寥数字：亲爱的xxx，请珍惜我的眼睛，我会永远爱你。。。随后男孩带上了眼罩穿上披风，来到了阿拉德大陆，用耳去听，用心去砍！刀斩肉身，心斩灵魂，剑是不会迟疑的！
+    </span>
+    <span style="font-size:30px;color:#7CFC00;">奶妈：不好意思虽然团长你那么煽情，但是我还是不奶瞎子  已退出攻坚队
+    </span>
     <p align="center">
       <a href="https:2448639601.github.io/mht.jpg" target="_blank">
         <img src="https:2448639601.github.io/xiazi.jpg"></a>
