--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link type="text/css" rel="stylesheet" href="/assets/bootstrap.min.css">
     <link type="text/css" rel="stylesheet" href="/assets/font-awesome.min.css">
     <link type="text/css" rel="stylesheet" href="/assets/ada.css">
+    <meta name="baidu-site-verification" content="KQMVJKh8tx" />
   </head>
   <body>
     <div id="header">
